flexLayout issue in safari

--- a/src/app/india/india.component.scss
+++ b/src/app/india/india.component.scss
@@ -157,3 +157,13 @@ code {
     opacity: 1;
   }
 }
+
+
+
+
+div[fxLayout="column"]>div[fxFlex],
+button[fxFlex],
+mat-card[fxFlex],
+span[fxFlex] {
+  flex: 1 0 auto !important;
+}
